codex cleanup and optimize